@@ -297,13 +297,19 @@ BU_EXPORT extern int bu_pid_alive(int pid);
 /**
  * @brief terminate a given process and any children.
  *
+ * returns truthfully whether the process could be killed.
+ *
+ * @deprecated use bu_pid_terminate instead
+ */
+DEPRECATED BU_EXPORT extern int bu_terminate(int process);
+/**
+ * @brief terminate a given process and any children.
+ *
  * @param[in] process - process ID of interest
  *
  * @return
  * returns truthfully whether the process could be killed
  */
-BU_EXPORT extern int bu_terminate(int process);
-// TODO: dep bu_terminate
 BU_EXPORT extern int bu_pid_terminate(int pid);
 
 
