@@ -73,7 +73,6 @@ set(LIBBU_SOURCES
   htond.c
   htonf.c
   interrupt.c
-  kill.c
   lex.c
   linebuf.c
   list.c
