@@ -25,6 +25,7 @@
 #endif
 
 #include <stdlib.h> /* exit */
+#include <signal.h> /* terminate */
 #include <sys/types.h>
 #include <string.h>
 #include <errno.h>
@@ -39,6 +40,15 @@
 #include "bu/snooze.h"
 #include "bu/vls.h"
 #include "./process.h"
+
+#ifndef HAVE_KILL
+#  include <TlHelp32.h>
+#endif
+
+/* c99 doesn't declare these */
+#if defined(HAVE_KILL) && !defined(__cplusplus)
+extern int kill(pid_t, int);
+#endif
 
 #if !defined(HAVE_DECL_WAIT) && !defined(wait) && !defined(_WINSOCKAPI_)
 extern pid_t wait(int *);
@@ -659,6 +669,56 @@ bu_pid_alive(int pid)
 
 
     return 0;
+}
+
+int
+bu_pid_terminate(int process)
+{
+#ifdef HAVE_KILL
+    int successful = 0;
+
+    /* kill process and all children (negative pid, sysv extension) */
+    successful = kill((pid_t)-process, SIGKILL);
+    /* kill() returns 0 for success */
+    successful = !successful;
+
+    return successful;
+}
+
+#else /* !HAVE_KILL */
+    int successful = 0;
+    HANDLE hProcessSnap;
+    HANDLE hProcess;
+    PROCESSENTRY32 pe32 = {0};
+
+    pe32.dwSize = sizeof(PROCESSENTRY32);
+    hProcessSnap = CreateToolhelp32Snapshot(TH32CS_SNAPPROCESS, 0);
+    if (hProcessSnap == INVALID_HANDLE_VALUE) {
+	return successful;
+    }
+
+    if (!Process32First(hProcessSnap, &pe32)) {
+	CloseHandle(hProcessSnap);
+	return successful;
+    }
+
+    /* First, find and kill the children */
+    do {
+	if (pe32.th32ParentProcessID == (DWORD)process) {
+	    bu_pid_terminate((int)pe32.th32ProcessID);
+	}
+    } while(Process32Next(hProcessSnap, &pe32));
+
+    /* Finally, kill the parent */
+    hProcess = OpenProcess(PROCESS_ALL_ACCESS, TRUE, (DWORD)process);
+    if (hProcess != NULL) {
+	successful = TerminateProcess(hProcess, BU_MSVC_ABORT_EXIT);
+	CloseHandle(hProcess);
+    }
+
+    CloseHandle(hProcessSnap);
+    return successful;
+#endif	/* HAVE_KILL */
 }
 
 int
