@@ -83,7 +83,7 @@ ged_close(struct ged *gedp)
 	for (size_t i = 0; i < BU_PTBL_LEN(&gedp->ged_subp); i++) {
 	    struct ged_subprocess *rrp = (struct ged_subprocess *)BU_PTBL_GET(&gedp->ged_subp, i);
 	    if (!rrp->aborted) {
-		bu_terminate(bu_process_pid(rrp->p));
+		bu_pid_terminate(bu_process_pid(rrp->p));
 		rrp->aborted = 1;
 	    }
 	    bu_ptbl_rm(&gedp->ged_subp, (long *)rrp);
